<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/ic_tour_app_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginEnd="@dimen/sp_16"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginEnd="@dimen/sp_16"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_12"
            android:layout_marginEnd="@dimen/sp_16"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/sp_12"
                android:paddingBottom="@dimen/sp_8"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginTop="@dimen/sp_20"
            android:layout_marginEnd="@dimen/sp_16"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_12"
            android:layout_marginEnd="@dimen/sp_16"
            app:endIconDrawable="@drawable/custom_password_eye"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/app_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:maxLength="10"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/sp_12"
                android:paddingBottom="@dimen/sp_8"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/button_style"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/app_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_20"
            android:layout_marginEnd="@dimen/sp_16"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:text="@string/register1"
                android:textColor="@color/app_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_300"
        android:padding="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:indeterminateTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>